assets/css/style.css
header nav {
}

.brand-img {
  width: 100px;
  height: 100px;
}

.logo-img {
  height: 150px;
  width: auto;
}

.section {
  margin-bottom: 4rem;
  margin-top: 2rem;
}

.text-primary {
  color: #633188 !important;
}

.bg-primary {
  background-color: #633188 !important;
}

.animate-marquee {
  animation: marquee 5s linear infinite;
}

.workstream-img {
  height: 300px;
  object-fit: cover;
}

.workstream-text {
  /* width: 80%; */
  /* margin: auto; */
}

.workstream-container {
  position: relative;
}

.workstream-heading {
  position: absolute;
  z-index: 1;
}

.workstream-img-wrapper {
  overflow: hidden;
}

.workstream-img-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 50%;
  background: linear-gradient(0deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0.8) 100%);
}

.text-styles {
  font-weight: 300;
}

.my-container {
  padding-right: 8rem;
  padding-left: 8rem;  
}





.imgAndDesc img {
  height: 250px;
  width: 250px;
  object-fit: cover;
}


@keyframes marquee {
  
  0% {
    transform: translateX(0);
  }
  100% {
    /* transform: translateX(-200%); */
    transform: translateX(0);
  }
}

/* @media (max-width: 768px) {
  .my-container {
    padding-left: 0;
    padding-right: 0;
  }
} */


@media (max-width: 640px) {
  body {
    overflow-x: hidden;
  }

  .imgAndDesc img {
    height: 100px;
    width: 100px;
  }

  .my-container {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

